# IL2Type-resolve

./: Il2CppResolver.cpp  Il2CppResolver.h  README.md
cpp/: CMakeLists.txt  main.cpp
cpp/Core/: Core.h
cpp/Hooks/: Hooks.cpp  Hooks.h
cpp/Resolver/: Il2CppResolver.cpp  Il2CppResolver.h
cpp/Utils/: Logger.h  Macros.h  MemoryUtils.h  ModUtils.h
